--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -29,6 +29,14 @@
         </tr>
         </thead>
       </table>
+      <ul class="nav nav-pls">
+        <li th:each = "page,status:${pages}">
+          <a class="btn btn-outline-info" th:class = "${currentPage==status.index?'btn btn-info ms-1':'btn btn-outline-info ms-1'}"
+             th:text="${status.index}"
+             th:href="@{/index(p=${status.index})}">
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
