--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"></head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
 <body>
 <div class="">
   <div class="card">
@@ -11,6 +13,11 @@
       Liste Patients
     </div>
     <div class="card-body">
+      <form method="get" th:action="@{index}">
+        <label>Keyword : </label>
+        <input type="text" name="k" th:value="${keyword}">
+        <button type="submit" class="btn btn-info"><i class="bi bi-search"></i></button>
+      </form>
       <table class="table">
         <thead>
         <tr>
@@ -19,6 +26,7 @@
           <th>Data</th>
           <th>Malade</th>
           <th>Score</th>
+          <th>Action</th>
         </tr>
         <tr th:each="p:${listPatients}">
           <td th:text="${p.id}"></td>
@@ -26,14 +34,17 @@
           <td th:text="${p.dateNaissance}"></td>
           <td th:text="${p.malade}"></td>
           <td th:text="${p.score}"></td>
+          <td>
+            <a onclick="return confirm('vous etes sur ?')" th:href="@{delete(id=${p.id},keyword=${keyword},page=${currentPage})}" class="btn btn-danger"><i class="bi bi-trash"></i> Delete</a>
+          </td>
         </tr>
         </thead>
       </table>
       <ul class="nav nav-pls">
-        <li th:each = "page,status:${pages}">
-          <a class="btn btn-outline-info" th:class = "${currentPage==status.index?'btn btn-info ms-1':'btn btn-outline-info ms-1'}"
-             th:text="${status.index}"
-             th:href="@{/index(p=${status.index})}">
+        <li th:each = "value,item:${pages}">
+          <a class="btn btn-outline-info" th:class = "${currentPage==item.index?'btn btn-info ms-1':'btn btn-outline-info ms-1'}"
+             th:text="${item.index}"
+             th:href="@{/index(p=${item.index},k=${keyword})}">
           </a>
         </li>
       </ul>
